# ARDFEvent

./: .gitignore  .gitmodules  404.html  ARDFEvent.spec  LICENSE  README.md  README_en.md  build.bat  build.sh  index.html  installer.iss  mkdocs.yml  requirements.txt  resource.qrc  resource_init.qrc
.github/workflows/: build.yaml
docs/: CMakeLists.txt  help.qhp  index.md
docs/ui/: basicinfowin.md  categorieswin.md  controlswin.md  importwin.md  mainwin.md  welcomewin.md
hooks/: rthook_gdal.py
i18n/: ARDFEvent_en.ts
search/: search_index.json
src/: api.py  import_runners.py  main.py  migrations.py  models.py  plugin.py  pluginmanager.py  py_results.py  registration.py  results.py  routes.py
src/exports/: base_reports.py  html_common.py  html_results.py  html_startlist.py  html_startlist_minutes.py  json_results.py  json_startlist.py
src/helpers/: stages.py
src/rust_results/: Cargo.toml
src/rust_results/ardfevent_rust/: __init__.py  __init__.pyi  results.pyi  routes.pyi
src/rust_results/src/: lib.rs  results.rs  routes.rs  routes_py.rs
src/ui/: basicinfowin.py  categorieswin.py  controlswin.py  experimentalwin.py  importwin.py  mainwin.py  mapwin.py  ochecklistwin.py  pluginmanagerwin.py  previewwin.py  (+13 more)
tests/: conftest.py  test_api.py  test_basicinfowin.py  test_categorieswin.py  test_controlswin.py  test_importwin.py  test_mainwin.py  test_ochecklistwin.py  test_pluginmanagerwin.py  test_racewin.py  test_readoutwin.py  test_registration.py  test_reportwin.py  test_results.py  test_resultswin.py  test_runnerwin.py  test_startnowin.py  test_ui.py
(+21 files in other folders)
