[package]
name = "ardfevent_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "ardfevent_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["chrono"] }
chrono = "0.4"
itertools = "0.14"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

